# yathaavat

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  codecov.yml  install.sh  lefthook.yml  pyproject.toml
.claude/automations/: iterm2_capture_demo_service.py  iterm2_capture_installer.py  iterm2_capture_safe_attach.py  iterm2_capture_tui.py  iterm2_dump_current_screen.py  iterm2_exception_panel.py  iterm2_find_text.py  iterm2_inspect.py  iterm2_list_sessions.py  iterm2_smart_pickers.py
.claude/skills/kasm-drive/: SKILL.md
.claude/skills/kasm-drive/agents/: openai.yaml
.github/workflows/: ci.yml  release.yml
.shux/templates/: review.toml
docs/: DESIGN.md  DESIGN_v2.md  mocks.html  mocks_v2.html
docs/research/: 00_current_state_gaps.md  01_tui_debugger_landscape.md  02_python_3_14_ecosystem.md  03_terminal_capabilities.md  04_tui_ux_best_practices.md  05_debugging_ux_literature_2024_2025.md  06_dap_debugpy_notes.md  07_python_314_debugger_gap_analysis_2026_05_01.md  README.md
docs/research/evidence/2026-05-01/: README.md
examples/: demo_app.py  demo_async_tasks.py  demo_exceptions.py  demo_service.py  demo_service_client.py  demo_service_compute.py  demo_target.py  vanilla_service.py
src/yathaavat/: __init__.py  cli.py
src/yathaavat/app/: attach.py  breakpoint.py  chrome.py  connect.py  exception.py  expression.py  file_discovery.py  fuzzy.py  host.py  input_history.py  keys.py  launch.py  layout.py  palette.py  panels.py  picker_history.py  search.py  server_discovery.py  source_gutter.py  source_nav.py  tasks.py  threads.py  tui.py  watches.py
src/yathaavat/core/: __init__.py  app_context.py  asyncio_tasks.py  commands.py  plugins.py  processes.py  services.py  session.py  traceback_parser.py  ui_host.py  widgets.py
src/yathaavat/core/dap/: __init__.py  client.py  codec.py
src/yathaavat/plugins/: builtin.py  debugpy.py  processes.py
tests/: __init__.py  support.py  test_app_panels_behavior.py  test_asyncio_tasks.py  test_attach_endpoints.py  test_attach_helpers.py  test_attach_picker.py  test_attach_port_discovery.py  test_breakpoint_dialog.py  test_breakpoint_parse.py  test_breakpoints_focus.py  test_builtin_commands.py  test_chrome.py  test_cli.py  test_cli_host_and_pickers.py  test_codeview_line_map.py  test_commands.py  test_completions.py  test_connect_parse.py  test_connect_picker.py  test_dap_client.py  test_dap_codec.py  test_debugpy_manager_behavior.py  test_disconnect_reset.py  test_exception.py  test_exception_info.py  test_expression_input.py  test_file_discovery.py  test_fuzzy.py  test_host.py  test_input_history.py  test_keys.py  test_launch.py  test_launch_picker.py  test_layout.py  test_palette.py  test_panels.py  test_picker_history.py  test_plugin_manager.py  test_processes.py  (+15 more)
