[build-system]
requires = ["hatchling>=1.26", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "yathaavat"
dynamic = ["version"]
description = "A terminal-first visual debugger for Python 3.14+"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "platformdirs>=4.3.0",
  "debugpy>=1.8.19",
  "textual[syntax]>=0.86.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.17",
  "pytest>=9.0",
  "pytest-cov>=7.0",
  "ruff>=0.9.0",
]

[project.scripts]
yathaavat = "yathaavat.cli:main"

[project.entry-points."yathaavat.plugins"]
builtin = "yathaavat.plugins.builtin:plugin"
processes = "yathaavat.plugins.processes:plugin"
debugpy = "yathaavat.plugins.debugpy:plugin"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/yathaavat/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/yathaavat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]

[tool.coverage.run]
branch = true
relative_files = true
source_pkgs = ["yathaavat"]
omit = ["src/yathaavat/_version.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == \"__main__\":",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "RUF", # ruff-specific rules
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true
strict = true
pretty = true
show_error_codes = true
